--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,16 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://pandemic-insights-and-prepareness-hub.vercel.app"
+        }
+      ]
+    }
   ]
 }
